Create MySQL database connection setup in config/db.js

--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
+
+# Application Port
 PORT=3500
-DB_HOST=localhost
-DB_USER=shadid
-DB_PASSWORD=12345678
-DB_NAME=RentItOut
-JWT_SECRET=
+
+# AWS RDS Database Connection
+DB_HOST='rentitout.cbqksiyiij66.us-east-1.rds.amazonaws.com'
+DB_USER='Shadid'                             
+DB_PASSWORD='12345678'                 
+DB_NAME='RentItOut'                         
+DB_PORT='3306'                             
+
+
+# JWT Secret for Authentication
+JWT_SECRET=                
