--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQL_HOST=rentitout.cbqksiyiij66.us-east-1.rds.amazonaws.com
 MYSQL_USER=Shadid
 MYSQL_PASSWORD=12345678
 MYSQL_DATABASE=RentItOut
+PORT=5000
