--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
 
         "nodemailer": "^6.9.16",
 
+        "swagger-jsdoc": "^6.2.8",
+
+        "swagger-ui-express": "^5.0.1",
+
         "uuid": "^10.0.0"
 
     },
